--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "dotenv": "6.0.0",
         "express": "4.16.3",
         "express-session": "1.15.6",
+        "feather-icons": "4.7.3",
         "morgan": "1.9.1",
         "multer": "1.4.0",
         "nodemon": "1.18.4",
